# NetScript

./: .editorconfig  Cargo.toml  Justfile  README.md  Taskfile.yml  deny.toml
.github/workflows/: ci.yml  release.yml
benches/: lexer_benchmark.rs
docs/: SSOT.md
src/: lib.rs  main.rs
src/adapters/: cli.rs  file.rs  mod.rs  repl.rs
src/app/: mod.rs
src/domain/: lexer.rs  mod.rs  parser.rs
src/ports/: lexer.rs  mod.rs
tests/: cli_integration_tests.rs  proptest_lexer.rs  snapshot_tests.rs  unit_tests.rs
tests/snapshots/: snapshot_tests__snapshot_function_call.snap  snapshot_tests__snapshot_if_statement.snap  snapshot_tests__snapshot_simple_assignment.snap
