[package]
name = "netscript"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/KooshaPari/NetScript.git"
description = "Network scripting language and runtime"

[workspace]
resolver = "2"

[dependencies]

[dev-dependencies]
proptest = "1.6.0"
insta = { version = "1.42.0", features = ["yaml"] }
cargo-fuzz = "0.12"

[[bin]]
name = "netscript"
path = "src/main.rs"

[lints.clippy]
all = "warn"
style = "warn"
perf = "warn"
complexity = "warn"
