[package]
name = "netscript"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/KooshaPari/NetScript.git"
description = "Network scripting language and runtime"

[workspace]
resolver = "2"

[dependencies]
unicode-ident = "1.0.14"
rustyline = "14.0"

[dev-dependencies]
proptest = "1.6.0"
insta = { version = "1.42.0", features = ["yaml"] }
cargo-fuzz = "0.12"
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.10"

[[bin]]
name = "netscript"
path = "src/main.rs"

[lints.clippy]
all = "warn"
style = "warn"
perf = "warn"
complexity = "warn"
